(lang dune 3.16)

(name simulation)

(generate_opam_files false)

(source
 (github krios2146/simulation_ocaml))

(authors "Vladimir Kidyaev")

(maintainers "Vladimir Kidyaev")

(license MIT)

(documentation https://github.com/krios2146/simulation_ocaml)

(package
 (name simulation)
 (synopsis "Project is a step-by-step simulation of a 2D world populated by herbivores and predators with console UI")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
